--- a/src/app/chessboard/chessboard.component.css
+++ b/src/app/chessboard/chessboard.component.css
@@ -5,3 +5,12 @@
     gap: 0;
     margin: 100px auto;
   }
+
+  .square {
+    width: 50px;
+    height: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+  }
