--- a/src/app/chessboard/chessboard.component.html
+++ b/src/app/chessboard/chessboard.component.html
@@ -10,5 +10,5 @@
   </div>
 
   <div class="controls">
-    <button (click)="resetGame()">Reset Game</button>
+    <button (click)="resetGame()">Restart</button>
   </div>
