--- a/src/app/chessboard/chessboard.component.html
+++ b/src/app/chessboard/chessboard.component.html
@@ -1,18 +1,17 @@
-<!-- chessboard.component.html -->
-<div *ngIf="!isMoveValid" class="error-message">
-    Invalid move! Please try again.
-  </div>
-  
-  <div class="board-container">
-    <div class="board">
+<div class="container">
+    <div class="chessboard">
       <div *ngFor="let row of boardState; let rowIndex = index">
-        <div *ngFor="let square of row; let colIndex = index"
+        <div *ngFor="let cell of row; let colIndex = index"
              class="square"
-             [ngClass]="getSquareClass(rowIndex, colIndex)"
+             [ngClass]="[getSquareClass(rowIndex, colIndex), selectedSquare === getSquareFromIndices(rowIndex, colIndex) ? 'selected' : '']"
              (click)="onSquareClick(rowIndex, colIndex)">
-          <div *ngIf="square" class="piece">{{ square }}</div>
+          <span *ngIf="cell" class="piece">{{ cell | uppercase }}</span>
         </div>
       </div>
+    </div>
+    
+    <div class="controls">
+      <button (click)="resetGame()">Reset Game</button>
     </div>
   </div>
   
