fixing a component error

--- a/src/app/chessboard/chessboard.component.html
+++ b/src/app/chessboard/chessboard.component.html
@@ -1,17 +1,10 @@
-<div class="container">
-  <div class="chessboard">
-    <div *ngFor="let row of boardState; let rowIndex = index">
-      <div *ngFor="let cell of row; let colIndex = index"
-           class="square"
-           [ngClass]="[getSquareClass(rowIndex, colIndex), 
-                       selectedSquare === getSquareFromIndices(rowIndex, colIndex) ? 'selected' : '']"
-           (click)="onSquareClick(rowIndex, colIndex)">
-        <span *ngIf="cell" class="piece">{{ cell | uppercase }}</span>
-      </div>
+<div class="chessboard">
+  <div *ngFor="let row of boardState; let rowIndex = index">
+    <div *ngFor="let cell of row; let colIndex = index"
+         class="square"
+         [ngClass]="[getSquareClass(rowIndex, colIndex), selectedSquare === getSquareFromIndices(rowIndex, colIndex) ? 'selected' : '']"
+         (click)="onSquareClick(rowIndex, colIndex)">
+      <span *ngIf="cell" class="piece">{{ cell | uppercase }}</span>
     </div>
-  </div>
-  
-  <div class="controls">
-    <button (click)="resetGame()">Reset Game</button>
   </div>
 </div>
